welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: not found: value length
  for (i <- 0 to length-1) {
                 ^